# yule

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  rust-toolchain.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
yule-api/: Cargo.toml
yule-api/src/: auth.rs  device_auth.rs  inference.rs  key_storage.rs  lib.rs  transport.rs  types.rs  verification.rs
yule-api/src/routes/: mod.rs  native.rs  openai_compat.rs
yule-api/tests/: integration.rs
yule-attest/: Cargo.toml
yule-attest/src/: lib.rs  log.rs  session.rs  verification.rs
yule-bench/: Cargo.toml
yule-bench/benches/: dequant.rs  inference.rs
yule-bench/src/: lib.rs
yule-cli/: Cargo.toml
yule-cli/src/: main.rs
yule-core/: Cargo.toml  build.rs
yule-core/src/: aqlm.rs  async_io.rs  chat_template.rs  dequant.rs  dtype.rs  ecc.rs  entropy.rs  error.rs  gguf.rs  lib.rs  llvq.rs  mmap.rs  model.rs  rank.rs  safetensors.rs  tensor.rs  tokenizer.rs
yule-core/src/kernels/: mod.rs  q4k_gemv_avx2.S
yule-core/src/simd/: avx2.rs  mod.rs  scalar.rs
yule-gpu/: Cargo.toml  build.rs
yule-gpu/kernels/cuda/: add.cu  attn_score.cu  attn_value.cu  compile.sh  embed_lookup.cu  matmul.cu  qmv_q4_0.cu  qmv_q4_k.cu  qmv_q6_k.cu  qmv_q8_0.cu  rms_norm.cu  rope.cu  silu_mul.cu  softmax.cu
yule-gpu/kernels/metal/: kernels.metal
yule-gpu/shaders/: add.comp  attn_score.comp  attn_value.comp  compile.sh  coop_matmul.comp  embed_lookup.comp  flash_decode_reduce.comp  flash_decode_split.comp  fused_swiglu.comp  megakernel.comp  megakernel_debug.comp  multihead_attn.comp  multihead_attn_v2.comp  qmv_q4_0.comp  qmv_q4_0_coalesced.comp  qmv_q4_0_fast.comp  qmv_q4_k.comp  qmv_q6_k.comp  qmv_q8_0.comp  rms_norm.comp  rms_norm_qmv_q4_0.comp  rope.comp  silu_mul.comp  softmax.comp
yule-gpu/shaders/compiled/: add.spv  attn_score.spv  attn_value.spv  coop_matmul.spv  embed_lookup.spv  flash_decode_reduce.spv  flash_decode_split.spv  fused_swiglu.spv  megakernel.spv  multihead_attn.spv  qmv_q4_0.spv  qmv_q4_0_coalesced.spv  qmv_q4_0_fast.spv  qmv_q4_k.spv  qmv_q6_k.spv  qmv_q8_0.spv  rms_norm.spv  rms_norm_qmv_q4_0.spv  rope.spv  silu_mul.spv  softmax.spv
yule-gpu/src/: backend.rs  buffer.rs  cpu.rs  lib.rs
yule-gpu/src/cuda/: device.rs  kernels.rs  memory.rs  mod.rs
yule-gpu/src/metal/: device.rs  memory.rs  mod.rs  pipelines.rs
yule-gpu/src/vulkan/: commands.rs  cooperative_matrix.rs  device.rs  memory.rs  mod.rs  pipeline.rs
yule-infer/: Cargo.toml
yule-infer/src/: attention.rs  batch.rs  constant_time.rs  dynamic_quant.rs  gpu_runner.rs  kv_cache.rs  lib.rs  mamba.rs  megakernel_runner.rs  mixture_of_depths.rs  mla.rs  model_runner.rs  prefix_cache.rs  ring_attention.rs  rwkv.rs  sampler.rs  sparse_attention.rs  speculative.rs  thread_pool.rs  token_merge.rs  verified_kv.rs  weight_loader.rs
yule-registry/: Cargo.toml
yule-registry/src/: cache.rs  hf_api.rs  lib.rs  pull.rs  quant.rs  resolve.rs
yule-sandbox/: Cargo.toml
yule-sandbox/src/: lib.rs  linux.rs  macos.rs  policy.rs  tee.rs  windows.rs
yule-validate/: Cargo.toml
yule-validate/src/: correctness.rs  infrastructure.rs  main.rs  model.rs  performance.rs  report.rs  research.rs
yule-verify/: Cargo.toml
yule-verify/src/: keys.rs  lib.rs  manifest.rs  merkle.rs  signature.rs
