[package]
name = "yule-api"
description = "Local API server: capability-token auth, streaming inference, OpenAI-compatible endpoints"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
yule-core = { workspace = true }
yule-infer = { workspace = true }
yule-verify = { workspace = true }
yule-sandbox = { workspace = true }
yule-attest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
getrandom = { workspace = true }
tokio-stream = { workspace = true }
memmap2 = { workspace = true }
