[package]
name = "yule-attest"
description = "Cryptographic attestation: signed inference logs, audit trails"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
yule-core = { workspace = true }
yule-verify = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
tracing = { workspace = true }
getrandom = { workspace = true }
