[package]
name = "yule-registry"
description = "Model registry: pull, cache, and manage verified model artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
yule-core = { workspace = true }
yule-verify = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
blake3 = { workspace = true }
tokio-stream = { workspace = true }
memmap2 = { workspace = true }
